[tool.poetry]
name = "stable-diffusion-webui"
version = "0.1.0"
description = ""
authors = ["ACGMN <ootopoo@vip.qq.com>"]
readme = "README.md"
packages = [{ include = "stable_diffusion_webui" }]

[tool.poetry.dependencies]
python = "^3.10"
blendmodes = "^2022"
accelerate = "^0.18.0"
basicsr = "^1.4.2"
fonts = "^0.0.3"
font-roboto = "^0.0.1"
gfpgan = "^1.3.8"
gradio = "^3.27.0"
invisible-watermark = "^0.1.5"
numpy = "^1.24.2"
omegaconf = "^2.3.0"
opencv-contrib-python = "^4.7.0.72"
requests = "^2.28.2"
piexif = "^1.1.3"
Pillow = "^9.5.0"
pytorch_lightning = "^2.0.1"
realesrgan = "^0.3.0"
scikit-image = "^0.20.0"
timm = "^0.6.13"
transformers = "^4.28.1"
torch = { file = "wheels/torch-2.0.0+cu118-cp310-cp310-win_amd64.whl" }
torchvision = { file = "wheels/torchvision-0.15.1+cu118-cp310-cp310-win_amd64.whl" }
einops = "^0.6.0"
jsonmerge = "^1.9.0"
clean-fid = "^0.1.35"
resize-right = "^0.0.2"
torchdiffeq = "^0.2.3"
kornia = "^0.6.11"
lark = "^1.1.5"
inflection = "^0.5.1"
GitPython = "^3.1.31"
torchsde = "^0.2.5"
safetensors = "^0.3.0"
psutil = "^5.9.5"
rich = "^13.3.4"
triton = { file = "wheels/triton-2.0.0-cp310-cp310-win_amd64.whl" }
xformers = "^0.0.19.dev516"
clip-openai = "^1.0.post20230121"
open-clip-torch = "^2.17.1"
numba = "^0.57.0rc1"
onnx = "^1.13.1"
onnxruntime = "^1.14.1"

mediapipe = "^0.9.3.0"
svglib = "^1.5.1"
fvcore = "^0.1.5.post20221221"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun-source"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true